<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="16dp"
    android:background="@color/bg"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".About">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:contentDescription="@string/content_discription"
        android:src="@drawable/sahay_nobg" />

    <!-- Title: About App -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <!-- Description: About App -->
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"/>

    <!-- Title: About Developer -->
    <TextView
        android:id="@+id/aboutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/descriptionTextView"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <!-- Description: About Developer -->
    <TextView
        android:id="@+id/descriptionTejas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dev"
        android:layout_below="@id/aboutme"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"/>

    <!-- Contact Information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTejas"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <!-- YouTube Link -->
        <TextView
            android:id="@+id/Youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="www.org/TGteamofficial"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_youtube"
            android:drawablePadding="8dp"
            android:autoLink="web"/>

        <!-- Email -->
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vijaykakde496@gmail.com"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="8dp"
            android:autoLink="email" />

        <!-- Phone Number -->
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8788580056"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:autoLink="phone" />

    </LinearLayout>

</RelativeLayout>
